# MandelFuckingBrot

./: CMakeLists.txt  generatePalette.py  main.cpp  main.cu  palette.py
